# mono-snippets

./: AUTHORS  ChangeLog  HACKING  Makefile.am  README  autogen.sh  configure.ac  mono-snippets.mds
src/: Makefile.am
src/NotificationAreaIcon/: Makefile.am  Sample.cs  snippet.mdp
